k8s/work-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: work-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: work.com
      http:
        paths:
          - path: /task-manager-front
            pathType: Prefix
            backend:
              service:
                name: task-manager-front-service
                port:
                  number: 80
